Ajustado CSS header logged, navbar.brand e navbar.burger

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,4 +16,11 @@ nav.navbar {
   .navbar-menu{
     background-color: $custom-purple;
   }
+  .navbar-burger{
+    ;
+  }
+}
+
+#brand1{
+  background-color: $custom-purple;
 }
